changed side colour

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <hr>
     <div>
         <h2 class = "btn btn-dark">CONTACTS</h2>
-        <h6>260A SENGKANG EAST WAY,<br>#06-486 <br>SINGAPORE 541260</h6>
+        <h6>000 SENGKANG WEST WAY,<br>#00-000 <br>SINGAPORE 000000</h6>
         <h6>Ankitkumarr.2020@sis.smu.edu.sg</h6>
         <h6>(+65)86879731</h6>
     </div>
@@ -37,7 +37,7 @@
     <!-- Profile Section -->
     <div>
         <h2 class = "btn btn-dark">PROFILE</h2>
-        <h5>A good team player always looking to resolve issues quickly.Eager t olearn and upgrade myself.</h5>
+        <h5>A good team player always looking to resolve issues quickly.Eager to learn and upgrade myself with experiences made.</h5>
     </div>
     <!-- Education Section -->
     <hr>
@@ -68,14 +68,14 @@
         <ul>
             
                 <li>Sergeant in the SAF
-                    <li>Given addititional role of breaching commander which was critical in a swift and decisive takover of hostile territory </li>
+                    <dd>Given addititional role of breaching commander which was critical in a swift and decisive takover of hostile territory </dd>
                 </li>
-                <li>Vice-Captain
-                    <li>Appointed as Vice-Captain because of leadership experience in NPCC previously.Managed welfare and motivation of fellow athletes and ended season with a 3-2 Win-Loss record,which was best in the past few years.</li>
+                <li>Vice-Captain of Basketball CCA in JC
+                    <dd>Appointed as Vice-Captain because of leadership experience in NPCC previously.Managed welfare and motivation of fellow athletes and ended season with a 3-2 Win-Loss record,which was best in the past few years.</dd>
                 </li>
             
             <li>AI4I Prework
-                <li>Completed this course on introducotry programming adn AI to upgrade myself</li>
+                <dd>Completed this course on introducotry programming adn AI to upgrade myself</dd>
             </li>
         </ul>
     </div>
@@ -87,9 +87,11 @@
         <ul>
             <li><h6>Battatlion Best Commander DEC 2019</h6></li>
             <li><h6>Head Secretary NPCC</h6></li>
+                <dd>In charge of attendance of 50+ members for weekly trainings as well as multiple courses over the course of 2 years.</dd>
+                <dd>Given additional role of training Junior Cadets the drills in final year of school.</dd>
             <li>
                 <h6>Initiated Handball interest group in secondary school</h6>
-                <p>Took part in C nad B div regularly</p>
+                <p>Took part in C and B div regularly</p>
             </li>
             <li><h6>CCA Leadership Distinction 2017</h6></li>
         </ul>
